# Experimenta

./: .gitignore  README.md  main.py  pyproject.toml
config/: docs_agent.yaml
config/rl/: dataset_info.json
config/sft/: dataset_info.json  llamafactory.yaml
experimenta/agent/deepwiki/: chat.py  config.py  data_pipeline.py  openai_client.py  prompts.py  rag.py  readme.md
experimenta/agent/deepwiki/config/: embedder.json  generator.json
experimenta/agent/llm/: deepseek_llm.py  factory.py
experimenta/agent/tool/: embedder.py
scripts/: curl_paper.py  merge_raw_data.py
scripts/doc_agent/: batch_clone_repos.py  batch_generate_docs.py  clean_repos_with_docs.py  create_repo_mapping.py  merge_successful_docs.py
scripts/tavily/: split_all_to_dpo_sft_test.py
scripts/web_search/: add_repo_created_time.py  filter_web_response.py  serper.py  synthesis_data.py  tavily.py
