[project]
name = "expreimenta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adalflow>=1.1.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.7",
    "mlflow>=3.9.0",
    "ollama>=0.6.1",
    "openreview-py>=1.56.1",
    "torch>=2.10.0",
]
